# tralda

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
benchmarks/supertree_construction/: plot_benchmark.py  run_benchmark.py
src/tralda/cograph/: ClusterDeletion.py  Cograph.py  CographEditor.py  __init__.py  detection.py  editing.py  functions.py
src/tralda/consensus/: LooseConsensus.py
src/tralda/datastructures/: AVLTree.py  DoublyLinkedList.py  LinkedList.py  Partition.py  Tree.py  __init__.py  avl_tree.py  binary_tree_avl.py  binary_tree_base.py  binary_tree_red_black.py  binary_tree_simple.py  doubly_linked.py  last_common_ancestor.py  linked.py  partition.py  tree.py
src/tralda/datastructures/bst/: __init__.py  avl.py  base.py  red_black.py  simple.py
src/tralda/datastructures/hdtgraph/: DynamicGraph.py  ETTree.py  dynamic_graph.py  et_tree.py
src/tralda/supertree/: Build.py  BuildST.py  CommonRefinement.py  LooseConsensus.py  __init__.py  build.py  build_st.py  common_refinement.py  consensus.py
src/tralda/tools/: TreeTools.py
src/tralda/utils/: graph_tools.py  tree_tools.py
tests/: all_tests.py  bst_tests.py  cograph_tests.py  supertree_tests.py  tree_tests.py
tralda/: __init__.py
tralda/cograph/: detection.py  editing.py  functions.py
tralda/datastructures/: __init__.py  doubly_linked.py  tree.py
tralda/datastructures/bst/: __init__.py  avl.py  red_black.py
tralda/datastructures/hdtgraph/: dynamic_graph.py
tralda/supertree/: common_refinement.py
tralda/utils/: tree_tools.py
