[project]
name = "tralda"
description = "A library for tree data structures and algorithms"
readme = "README.md"
authors = [
    { name = "David Schaller", email = "38377210+david-schaller@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
]
dynamic = ["version"]
keywords = [
    "tree",
    "graph",
    "datastructure",
    "LCA",
    "last common ancestor",
    "least common ancestor",
    "supertree",
    "BuildST",
    "triple",
    "dynamic",
    "connectivity",
    "BST",
    "balanced binary search tree",
    "AVL",
    "red-black tree",
    "HDT datastructure",
    "cograph",
]

[project.urls]
Repository = "https://github.com/david-schaller/tralda.git"
Issues = "https://github.com/david-schaller/tralda/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
include = ["tralda*"]

[tool.setuptools.dynamic.version]
attr = "tralda.__version__"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.codespell]
ignore-words-list = "stoer"
