[metadata]
name = tralda
version = 1.0.1
author = David Schaller
author_email = sdavid@bioinf.uni-leipzig.de
description = A library for tree data structures and algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/david-schaller/tralda
project_urls =
    Bug Tracker = https://github.com/david-schaller/tralda/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    networkx

[options.packages.find]
where = src
